manifests/karakeep/chrome-service.yaml
# ClusterIP service for headless Chrome
# Accessed by Karakeep at http://chrome:9222 (in-namespace DNS)
#
# CKA topic: Service discovery within namespace
---
apiVersion: v1
kind: Service
metadata:
  name: chrome
  namespace: karakeep
  labels:
    app: chrome
    app.kubernetes.io/part-of: karakeep
spec:
  selector:
    app: chrome
  ports:
    - name: debug
      port: 9222
      targetPort: 9222
      protocol: TCP
